--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-      working-directory: ./naiveautoml
+      working-directory: ./python/naiveautoml
     - name: Test with tox
       run: tox
-      working-directory: ./naiveautoml
+      working-directory: ./python/naiveautoml
