updated folder for pytest

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -12,7 +12,7 @@ setenv =
 deps =
     -rrequirements.txt
     -rrequirements_dev.txt
-commands = pytest naiveautoml
+commands = pytest test
 
 
 [testenv:flake8]
