increased runtime for jobs and cleaned up commons

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -18,7 +18,7 @@ commands = pytest test
 [testenv:flake8]
 basepython = python3.10
 deps = flake8
-commands = flake8 naiveautoml
+commands = flake8 --max-line-length 119 naiveautoml
 
 [testenv:mypy]
 basepython = python3.10
