updated CI-relevant stuff

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 minversion = 3.10.0
-envlist = py310, flake8, mypy
+envlist = flake8, py310, mypy
 
 [gh-actions]
 python =
-    3.10: py310, flake8, mypy
+    3.10: flake8, py310, mypy
 
 [testenv]
 setenv =
@@ -18,7 +18,7 @@ commands = pytest test
 [testenv:flake8]
 basepython = python3.10
 deps = flake8
-commands = flake8 --max-line-length 119 naiveautoml
+commands = flake8 --max-line-length 120 naiveautoml
 
 [testenv:mypy]
 basepython = python3.10
