--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 10
+    timeout-minutes: 60
     strategy:
       matrix:
         os: [ubuntu-20.04]
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-      working-directory: ./naiveautoml
+      working-directory: ./python/naiveautoml
     - name: Test with tox
       run: tox
-      working-directory: ./naiveautoml
+      working-directory: ./python/naiveautoml
