--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,5 +24,5 @@ jobs:
         pip install tox tox-gh-actions
       working-directory: ./python/naiveautoml
     - name: Test with tox
-      run: tox
+      run: tox -e flake8 && tox -e py310 && tox -e mypy  # hereby we enable fast failures
       working-directory: ./python/naiveautoml
