Add multiple evaluation functions for experiments

--- a/experiments/configuration.conf
+++ b/experiments/configuration.conf
@@ -3,12 +3,14 @@ provider = sqlite
 database = experiments
 table = example
 
-keyfields = dataset_id:int, seed:int, metric
-dataset_id = 61, 1464, 31, 334, 50
+keyfields = dataset_id:int, seed:int, eval_func, metric, epsilon
+eval_func = kfold_5, kfold_3, lccv, mccv_1, mccv_3, mccv_5
+dataset_id = 61
 seed = 0
-metric = log_loss
+metric = accuracy
+epsilon = 0
 
 n_jobs=1
 
-resultfields = time, learner_class, learner_hps, feature_pre_processor_class, feature_pre_processor_hps, data_pre_processor_class, data_pre_processor_hps, neg_log_loss, roc_auc, new_best, statusml, exception
+resultfields = start_time, end_time, run_time, pipeline, score, history
 resultfields.timestamps = false
