repaired severe mistake in phase change, because not the best pipeline was used in phase 2

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -12,7 +12,7 @@ setenv =
 deps =
     -rrequirements.txt
     -rrequirements_dev.txt
-commands = pytest test -x
+commands = pytest test -x --durations=0
 
 
 [testenv:flake8]
